--- a/lapidary-runtime/usage/operation/index.html
+++ b/lapidary-runtime/usage/operation/index.html
@@ -968,7 +968,7 @@ types. This mechanism allows developers to define how responses are parsed and r
 <p>Example:</p>
 <pre><code class="language-python">@get('/cat')
 async def list_cats(self: Self) -&gt; Annotated[
-    List[Cat],
+    Awaitable[List[Cat]],
     Responses({
         '2XX': {
             'application/json': List[Cat],
@@ -992,7 +992,7 @@ class CatsListResponse(ResponseEnvelope):
 class CatClient(ClientBase):
    @get('/cat')
    async def list_cats(self: Self) -&gt; Annotated[
-       CatsListResponse,
+       Awaitable[CatsListResponse],
        Responses({
            '2XX': {
                'application/json': CatsListResponse,
@@ -1024,7 +1024,7 @@ class ErrorModel(Exception):
 async def list_cats(
         self: Self,
 ) -&gt; Annotated[
-    List[Cat],
+    Awaitable[List[Cat]],
     Responses({
         '2XX': {...},
         '4XX': {
