--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 <li class="task-list-item"><input type="checkbox" disabled checked/> In-python DSL for writing Web API clients declaratively</li>
 <li class="task-list-item"><input type="checkbox" disabled checked/> Use pydantic models for JSON data</li>
 <li class="task-list-item"><input type="checkbox" disabled/> Compatibility with OpenAPI<ul>
-<li>3.0 (in-progress)</li>
+<li><a href="lapidary-render/docs/openapi/">3.0 (in-progress)</a></li>
 <li>3.1 (planned)</li>
 </ul>
 </li>
