--- a/lapidary-runtime/index.html
+++ b/lapidary-runtime/index.html
@@ -713,11 +713,11 @@ class CatClient(ClientBase):
     async def cat_get(
         self: Self,
         *,
-        id: Annotated[int, Path(style=ParamStyle.simple)],
+        id: Annotated[int, Path],
     ) -&gt; Annotated[Awaitable[Cat], Responses({
-        '2XX': {
+        '2XX': Response(Body({
             'application/json': Cat
-        },
+        })),
     })]:
         pass
 
