--- a/lapidary/ChangeLog/index.html
+++ b/lapidary/ChangeLog/index.html
@@ -852,6 +852,7 @@ and the format of this file is based on <a href="https://keepachangelog.com/en/1
 <li>Always return response body and headers (metadata) model as result of operation methods.</li>
 <li>Use pydantic to encode request parameters and decode response headers.</li>
 <li>Response annotation accepts metadata model, which can be used to send headers and or parameters.</li>
+<li>Raise ClientError for 4XX responses and ServerError for 5XX responses.</li>
 </ul>
 <h3 id="changed">Changed</h3>
 <ul>
