--- a/lapidary/ChangeLog/index.html
+++ b/lapidary/ChangeLog/index.html
@@ -904,6 +904,7 @@ and the format of this file is based on <a href="https://keepachangelog.com/en/1
 <h3 id="added">Added</h3>
 <ul>
 <li>Accept session_factory in <code>ClientBase.__init__</code>.</li>
+<li>Helper function to iterate over pages.</li>
 </ul>
 <h3 id="fixed">Fixed</h3>
 <ul>
