deploy: 236268c5ae6536b9730d4a3a95e49870076059ac

--- a/lapidary-render/ChangeLog/index.html
+++ b/lapidary-render/ChangeLog/index.html
@@ -1204,10 +1204,12 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <h3 id="added">Added</h3>
 <ul>
 <li>Support for OpenAPI plugins.</li>
+<li>Support for extra sources.</li>
 </ul>
 <h3 id="changed">Changed</h3>
 <ul>
 <li>JSON Patch support is now a plugin.</li>
+<li>Breaking: openapi directory is now <code>${source root}/openapi</code></li>
 </ul>
 <h2 id="0111-2024-08-15">[0.11.1] - 2024-08-15</h2>
 <h3 id="removed">Removed</h3>
